--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ jobfile.yml
 *.h5
 simclr_20230825_143247_encoder/
 trained models/
+lumi_jobfile.sh
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
